fixes for custom table header and remove check for box score in mlb page to prevent it from not showing up

--- a/app/components/custom-table/custom-table.component.less
+++ b/app/components/custom-table/custom-table.component.less
@@ -3,12 +3,11 @@
   // table-layout: fixed;
   &-header {
     position: relative;
-    padding: 8px 10px 8px 0px;
+    padding: 8px 0px;
     text-align: center;
-    .globalDefaultFont(10px, 400);
     border: @strokeGrey 1px solid;
     margin-bottom: 5px;
-
+    .globalDefaultFont(10px, 400);
     &-sort:hover {
       border-color: @masterBrandColor;
       cursor: pointer;
